--- a/demo.html
+++ b/demo.html
@@ -29,74 +29,74 @@
             <div class="gig-gallery horizontal">
                 <div class="gig-image">
                     
-                    <img class="gig-thumbnail" src="images/image-1.jpg" />
-                    <img class="gig-fullsize" src="images/image-1.jpg" />
+                    <img class="gig-thumbnail" src="images/image-1.png" />
+                    <img class="gig-fullsize" src="images/image-1.png" />
                     <div class="gig-info">
-                        <span class="gig-title">Morris Louis, Saraband</span>
+                        <span class="gig-title">This is an example title</span>
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-2.jpg" />
-                    <img class="gig-fullsize" src="images/image-2.jpg" />
+                    <img class="gig-thumbnail" src="images/image-2.png" />
+                    <img class="gig-fullsize" src="images/image-2.png" />
                     <div class="gig-info">
-                        <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
+                        <!-- <span class="gig-title"></span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-3.jpg" />
-                    <img class="gig-fullsize" src="images/image-3.jpg" />
+                    <img class="gig-thumbnail" src="images/image-3.png" />
+                    <img class="gig-fullsize" src="images/image-3.png" />
                     <div class="gig-info">
-                        <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
+                        <!-- <span class="gig-title"></span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-4.jpg" />
-                    <img class="gig-fullsize" src="images/image-4.jpg" />
+                    <img class="gig-thumbnail" src="images/image-4.png" />
+                    <img class="gig-fullsize" src="images/image-4.png" />
                     <div class="gig-info">
-                        <span class="gig-title">Victoria Kloch, Purple, Magenta and Red Blocks</span>
+                        <!-- <span class="gig-title"></span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-5.jpg" />
-                    <img class="gig-fullsize" src="images/image-5.jpg" />
+                    <img class="gig-thumbnail" src="images/image-5.png" />
+                    <img class="gig-fullsize" src="images/image-5.png" />
                     <div class="gig-info">
-                        <span class="gig-title">Victoria Kloch, White, Yellow, Rose Pink and Red Blocks</span>
+                        <span class="gig-title">Titles can appear on any image you like</span>
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-6.jpg" />
-                    <img class="gig-fullsize" src="images/image-6.jpg" />
+                    <img class="gig-thumbnail" src="images/image-6.png" />
+                    <img class="gig-fullsize" src="images/image-6.png" />
                     <div class="gig-info">
-                        <span class="gig-title">Wendy Skog, Hot Shadow</span>
+                        <!-- <span class="gig-title"></span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-7.jpg" />
-                    <img class="gig-fullsize" src="images/image-7.jpg" />
+                    <img class="gig-thumbnail" src="images/image-7.png" />
+                    <img class="gig-fullsize" src="images/image-7.png" />
                     <div class="gig-info">
-                        <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
+                        <!-- <span class="gig-title"></span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-8.jpg" />
-                    <img class="gig-fullsize" src="images/image-8.jpg" />
+                    <img class="gig-thumbnail" src="images/image-8.png" />
+                    <img class="gig-fullsize" src="images/image-8.png" />
                     <div class="gig-info">
-                        <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
+                        <span class="gig-title">They can be on some, or none, or all</span>
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
                 <div class="gig-image">
-                    <img class="gig-thumbnail" src="images/image-9.jpg" />
-                    <img class="gig-fullsize" src="images/image-9.jpg" />
+                    <img class="gig-thumbnail" src="images/image-9.png" />
+                    <img class="gig-fullsize" src="images/image-9.png" />
                     <div class="gig-info">
-                        <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
+                        <!-- <span class="gig-title">Example Image</span> -->
                         <span class="gig-caption"> Example Caption</span>
                     </div>
                 </div>
@@ -109,75 +109,74 @@
 
             <div class="gig-gallery vertical">
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-10.jpg" />
-                        <img class="gig-fullsize" src="images/image-10.jpg" />
+                        <img class="gig-thumbnail" src="images/image-10.png" />
+                        <img class="gig-fullsize" src="images/image-10.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Barnett Newman, Who's Afraid of Red, Yellow
-                                    and Blue?</span>
+                            <span class="gig-title">Try clicking on an image</span>
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-11.jpg" />
-                        <img class="gig-fullsize" src="images/image-11.jpg" />
+                        <img class="gig-thumbnail" src="images/image-11.png" />
+                        <img class="gig-fullsize" src="images/image-11.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Mark Rothko, White Center</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-12.jpg" />
-                        <img class="gig-fullsize" src="images/image-12.jpg" />
+                        <img class="gig-thumbnail" src="images/image-12.png" />
+                        <img class="gig-fullsize" src="images/image-12.png" />
                         <div class="gig-info">
                             <!-- <span class="gig-title"> Example Image Of Stacked Paper</span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-13.jpg" />
-                        <img class="gig-fullsize" src="images/image-13.jpg" />
+                        <img class="gig-thumbnail" src="images/image-13.png" />
+                        <img class="gig-fullsize" src="images/image-13.png" />
                         <div class="gig-info">
-                            <span class="gig-title">&Aacute;kos B&aacute;nki</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-14.jpg" />
-                        <img class="gig-fullsize" src="images/image-14.jpg" />
+                        <img class="gig-thumbnail" src="images/image-14.png" />
+                        <img class="gig-fullsize" src="images/image-14.png" />
                         <div class="gig-info">
-                            <!-- <span class="gig-title">Victoria Kloch, White, Yellow, Rose Pink and Red Blocks</span> -->
+                            <span class="gig-title">In the vertical direction, the order is also vertical- keep this in mind</span>
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-15.jpg" />
-                        <img class="gig-fullsize" src="images/image-15.jpg" />
+                        <img class="gig-thumbnail" src="images/image-15.png" />
+                        <img class="gig-fullsize" src="images/image-15.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Brian Elson</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-16.jpg" />
-                        <img class="gig-fullsize" src="images/image-16.jpg" />
+                        <img class="gig-thumbnail" src="images/image-16.png" />
+                        <img class="gig-fullsize" src="images/image-16.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Mark Rothko</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-17.jpg" />
-                        <img class="gig-fullsize" src="images/image-17.jpg" />
+                        <img class="gig-thumbnail" src="images/image-17.png" />
+                        <img class="gig-fullsize" src="images/image-17.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Barnett Newman, Dionysis</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
                     <div class="gig-image">
-                        <img class="gig-thumbnail" src="images/image-18.jpg" />
-                        <img class="gig-fullsize" src="images/image-18.jpg" />
+                        <img class="gig-thumbnail" src="images/image-18.png" />
+                        <img class="gig-fullsize" src="images/image-18.png" />
                         <div class="gig-info">
-                            <span class="gig-title">Mark Rothko</span>
+                            <!-- <span class="gig-title"></span> -->
                             <span class="gig-caption"> Example Caption</span>
                         </div>
                     </div>
