Added link capability

--- a/demo.html
+++ b/demo.html
@@ -34,6 +34,7 @@
                     <div class="gig-info">
                         <span class="gig-title">This is an example title</span>
                         <span class="gig-caption"> Example Caption</span>
+                        <span class="gig-link">http://audreyserene.com</span>
                     </div>
                 </div>
                 <div class="gig-image">
