Added link documentation

--- a/demo.html
+++ b/demo.html
@@ -203,7 +203,8 @@
         &lt;img class="<b>gig-fullsize</b>" src="<span class="red">images/image-1.jpg</span>" /&gt;
         &lt;div class="<b>gig-info</b>"&gt;
              &lt;span class="<b>gig-title</b>"&gt;<span class="red">Example Title</span>&lt;/span&gt; <span class="gray">&lt;!-- Optional --&gt;</span>
-            &lt;span class="<b>gig-caption</b>"&gt;<span class="red">Example Caption</span>&lt;/span&gt; <span class="gray">&lt;!-- Optional --&gt;</span>
+             &lt;span class="<b>gig-caption</b>"&gt;<span class="red">Example Caption</span>&lt;/span&gt; <span class="gray">&lt;!-- Optional --&gt;</span>
+             &lt;span class="<b>gig-link</b>"&gt;<span class="red">http://examplelink.com/</span>&lt;/span&gt; <span class="gray">&lt;!-- Optional --&gt;</span>
         &lt;/div&gt;
     &lt;/div&gt;
 
@@ -219,6 +220,8 @@
     box-shadow: 0.5em 0 0 #fff,-0.5em 0 0 #fff; <span class="gray">/* Padding */</span>
 }
                 </pre>
+                <p>One more thing you can do is make the whole block link to something. To do this, just have your A tag open right after .gig-image, and close right before .gig-image closes.</p>
+                
             </div>
         </div>
     </body>
